fix: breadcrumb icon alignment on wb references

--- a/tldraw/apps/tldraw-logseq/src/styles.css
+++ b/tldraw/apps/tldraw-logseq/src/styles.css
@@ -1173,9 +1173,6 @@ button.tl-shape-links-panel-item-remove-button {
 
 .block-link-reference-row {
   @apply block;
-  > * {
-    @apply inline;
-  }
 }
 
 .tl-tooltip-content {
